# hornet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  clang20.toolchain.cmake  hash.h  hash_test.cpp  main.cpp  message.h  message_buffer.h  message_buffer_test.cpp  message_builder.h  message_builder_test.cpp  message_writer.h  notes.md  out.txt  output_streamer.h  protocol.h  sha256.h  types.h  uint256.h  version_message.h  version_message_test.cpp
src/hornetlib/: CMakeLists.txt
src/hornetlib/consensus/: bips.h  difficulty_adjustment.h  header_ancestry_view.h  merkle.h  parameters.h  rule.h  types.h  utxo.h  validate_api.h  validate_block.h  validate_block_context.h  validate_block_structure.h  validate_header.h  validate_transaction.h  validator.h
src/hornetlib/consensus/rules/: context.h  validate.h  validate_block_context.h  validate_block_structure.h  validate_compositions.h  validate_forward.h  validate_header.h  validate_spending.h  validate_transaction.h
src/hornetlib/crypto/: hash.h
src/hornetlib/data/: block_io.h  chain_tree.h  hashed_tree.h  header_chain.h  header_context.h  header_sync.h  header_timechain.cpp  header_timechain.h  key.h  keyframe_sidecar.h  lock.h  priority_shared_mutex.h  sidecar.h  sidecar_binding.h  timechain.h
src/hornetlib/data/utxo/: age.h  atomic_vector.h  block_outputs.h  codec.h  committed.h  compact_index.h  compacter.h  database.h  database_view.h  design.md  directory.h  flusher.h  index.h  io.h  joiner.h  memory_age.h  memory_run.h  notes.md  outputs_segment.h  outputs_table.h  parallel.h  recent.h  results.h  search.h  segments.h  shard.h  shard_tail.h  single_writer.h  sort.h  spend_pipeline.h  streaming_unspent_state.cpp  streaming_unspent_state.h  table.h  table_tail.h  tiled_vector.h  types.h  unique_fd.h
src/hornetlib/encoding/: endian.h  reader.h  transfer.h  writer.h
src/hornetlib/message/: block.h  getdata.h  getheaders.h  headers.h  ping.h  pong.h  registry.h  sendcmpct.h  verack.h  version.h  visitor.h
src/hornetlib/model/: header_context.h
src/hornetlib/net/: bitcoind.cpp  bitcoind.h  connection.h  constants.h  peer.h  peer_manager.h  peer_registry.h  receive.h  socket.cpp  socket.h
src/hornetlib/node/: block_sync.h  broadcaster.h  engine.cpp  engine.h  event_handler.h  header_sync.h  inbound_handler.h  inbound_message.h  outbound_message.h  peer_negotiator.cpp  peer_negotiator.h  processor.cpp  processor.h  protocol_loop.cpp  protocol_loop.h  serialization_memo.h  sync_handler.h  sync_manager.h
src/hornetlib/protocol/: block.cpp  block.h  block_header.h  capabilities.h  compact_target.h  constants.h  dispatch.h  factory.h  framer.h  hash.h  header.h  inventory.h  message.h  message_factory.cpp  message_factory.h  message_handler.cpp  message_handler.h  parser.h  target.h  transaction.h  txid.h  work.h
src/hornetlib/protocol/message/: block.h  getdata.h  getheaders.h  headers.h  ping.h  pong.h  sendcmpct.h  verack.h  version.h
src/hornetlib/protocol/script/: instruction.h  minimal.h  op.h  parser.h  processor.cpp  processor.h  script_view.h  view.h  writer.h
src/hornetlib/util/: abs.h  as_span.h  big_uint.h  expected.h  hex.h  io.h  iterator_range.h  log.h  notify.cpp  notify.h  optional.h  pointer_iterator.h  shared_span.h  subarray.h  thread_safe_queue.h  throw.h  timeout.h  unroll.h
src/hornetnodelib/: CMakeLists.txt  controller.cpp  controller.h
src/hornetnodelib/dispatch/: broadcaster.h  event_handler.h  peer_negotiator.cpp  peer_negotiator.h  protocol_loop.cpp  protocol_loop.h  serialization_memo.h
src/hornetnodelib/net/: bitcoind.cpp  bitcoind.h  connection.h  constants.h  peer.h  peer_address.h  peer_manager.h  peer_registry.h  receive.h  socket.cpp  socket.h  tcp_notification_sink.h
src/hornetnodelib/node/: block_sync.h  broadcaster.h  event_handler.h  header_sync.h  peer_negotiator.cpp  peer_negotiator.h  protocol_loop.cpp  protocol_loop.h  sync_handler.h  sync_manager.h
src/hornetnodelib/sync/: block_sync.h  header_sync.h  sync_handler.h  sync_manager.h  types.h  validation_pipeline.h
src/hornetnodelib/util/: command_line_parser.h
tests/hornetlib/: CMakeLists.txt
tests/hornetlib/consensus/: difficulty_adjustment_test.cpp  merkle_test.cpp  validate_block_test.cpp  validate_transaction_test.cpp  validator_test.cpp
tests/hornetlib/crypto/: hash_test.cpp
tests/hornetlib/data/: block_io_test.cpp  chain_tree_test.cpp  hashed_tree_test.cpp  header_chain_test.cpp  header_context_test.cpp  header_timechain_test.cpp  keyframe_sidecar_test.cpp  priority_shared_mutex_test.cpp  sidecar_test.cpp
tests/hornetlib/data/utxo/: atomic_vector_test.cpp  (+15 more)
tests/hornetlib/encoding/: reader_test.cpp  writer_test.cpp
tests/hornetlib/message/: verack_test.cpp  version_test.cpp
tests/hornetlib/model/: header_context_test.cpp
tests/hornetlib/net/: bitcoind_test.cpp  connection_test.cpp  peer_manager_test.cpp  peer_test.cpp  socket_test.cpp
tests/hornetlib/node/: engine_test.cpp  protocol_loop_test.cpp  sync_manager_test.cpp
tests/hornetlib/protocol/: block_header_test.cpp  block_test.cpp  compact_target_test.cpp  dispatch_test.cpp  factory_test.cpp  framer_test.cpp  genesis_test.cpp  handshake_test.cpp  parser_test.cpp
tests/hornetlib/util/: big_uint_test.cpp  hex_test.cpp  notify_test.cpp  pointer_iterator_test.cpp  thread_safe_queue_test.cpp
tests/hornetnodelib/: CMakeLists.txt
tests/hornetnodelib/dispatch/: protocol_loop_test.cpp
tests/hornetnodelib/net/: bitcoind_test.cpp  connection_test.cpp  peer_manager_test.cpp  peer_test.cpp  socket_test.cpp  tcp_notification_sink_test.cpp
tests/hornetnodelib/node/: protocol_loop_test.cpp  sync_manager_test.cpp
tests/hornetnodelib/sync/: sync_manager_test.cpp  validation_pipeline_test.cpp
tests/integration/: CMakeLists.txt
tests/integration/validation/: merkle_root_validation_test.cpp
tests/testutil/: CMakeLists.txt  blockchain.h  data_path.cpp  data_path.h  protocol_session.h  round_trip.h  temp_folder.h
tests/testutil/net/: bitcoind_peer.cpp  bitcoind_peer.h  bitcoind_peer_test.cpp
(+197 files in other folders)
